# prefsampling

./: .gitignore  README.md  ToDo.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
docs/: citation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html  validation.html
docs-source/: make.bat
docs-source/source/: conf.py  index.rst  installation.rst  quickstart.rst  usage.rst  validation.rst
docs/_modules/: index.html  prefsampling.html
docs/_sources/: citation.rst  index.rst  installation.rst  quickstart.rst  validation.rst
docs/_static/: documentation_options.js
docs/reference/: combinatorics.html  constants.html  index.html  inputvalidators.html
docs/validation/: approval.html  index.html  ordinal.html  tree.html
prefsampling/: __init__.py  combinatorics.py  decorators.py  inputvalidators.py  utils.py
prefsampling/approval/: __init__.py  euclidean.py  identity.py  impartial.py  mixture.py  noise.py  partylist.py  resampling.py  truncated_ordinal.py  truncated_urn.py  urn.py  utils.py
prefsampling/core/: __init__.py  (+5 more)
tests/: test_all_ordinal_samplers.py  test_all_samplers.py  test_approval_resampling.py  test_combinatorics.py  test_constants.py  test_decorators.py  test_input_validators.py  test_ordinal_mallows.py  test_ordinal_plackettluce.py  test_ordinal_samplers.py  test_ordinal_urn.py  test_samplers.py  test_theoretical_distribution.py  test_trees.py  utils.py
validation/: run.py  run_ordinal.py  test.py  utils.py  validator.py  validators.py
(+203 files in other folders)
