[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prefsampling"
version = "0.1.21"
description = "Algorithms to sample preferences of all kinds."
authors = [
  { name = "Simon Rey", email = "reysimon@orange.fr" },
  { name = "Stanisław Szufa", email = "s.szufa@gmail.com" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "Sphinx",
    "sphinx-book-theme",
    "sphinxcontrib-napoleon",
    "unittest2",
    "matplotlib",
    "pandas",
    "seaborn",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/COMSOC-Community/prefsampling"
"Bug Tracker" = "https://github.com/COMSOC-Community/prefsampling/issues"
